# asiai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXTE-REPRISE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  TEST-STATUS-v1.0.1.md  mkdocs.yml  nohup.out  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
docs/: CNAME  agent-skills.json  agent.de.md  agent.es.md  agent.fr.md  agent.it.md  agent.ja.md  agent.ko.md  agent.md  agent.pt.md  agent.zh.md  agentic-benchmarks.de.md  agentic-benchmarks.es.md  agentic-benchmarks.fr.md  agentic-benchmarks.it.md  agentic-benchmarks.ja.md  agentic-benchmarks.ko.md  agentic-benchmarks.md  agentic-benchmarks.pt.md  agentic-benchmarks.zh.md  architecture.de.md  architecture.es.md  architecture.fr.md  architecture.it.md  architecture.ja.md  architecture.ko.md  architecture.md  architecture.pt.md  architecture.zh.md  bench-modes.md  benchmark-best-practices.de.md  benchmark-best-practices.es.md  benchmark-best-practices.fr.md  benchmark-best-practices.it.md  benchmark-best-practices.ja.md  benchmark-best-practices.ko.md  benchmark-best-practices.md  benchmark-best-practices.pt.md  benchmark-best-practices.zh.md  benchmark-card.de.md  (+115 more)
docs/.well-known/: agent-card.json  agent-skills.json  api-catalog  security.txt
docs/.well-known/mcp/: server-card.json
docs/assets/: og-image-v2.html  og-image-v3.html  og-image.html
docs/assets/stylesheets/: custom.css
docs/bmad/: README.md
docs/bmad/sprint-0-analyst/: brief.md  dependency-map.md  findings.md  user-stories-candidates.md
docs/commands/: bench.de.md  bench.es.md  bench.fr.md  bench.it.md  bench.ja.md  bench.ko.md  bench.md  bench.pt.md  bench.zh.md  compare.de.md  compare.es.md  compare.fr.md  compare.it.md  compare.ja.md  compare.ko.md  compare.md  compare.pt.md  compare.zh.md  config.de.md  config.es.md  config.fr.md  config.it.md  config.ja.md  config.ko.md  config.md  config.pt.md  config.zh.md  daemon.de.md  daemon.es.md  daemon.fr.md  daemon.it.md  daemon.ja.md  daemon.ko.md  daemon.md  daemon.pt.md  daemon.zh.md  detect.de.md  detect.es.md  detect.fr.md  detect.it.md  (+95 more)
docs/engines/: exo.de.md  exo.es.md  exo.fr.md  exo.it.md  exo.ja.md  exo.ko.md  exo.md  exo.pt.md  exo.zh.md  llamacpp.de.md  llamacpp.es.md  llamacpp.fr.md  llamacpp.it.md  llamacpp.ja.md  llamacpp.ko.md  llamacpp.md  llamacpp.pt.md  llamacpp.zh.md  lmstudio.de.md  lmstudio.es.md  lmstudio.fr.md  lmstudio.it.md  lmstudio.ja.md  lmstudio.ko.md  lmstudio.md  lmstudio.pt.md  lmstudio.zh.md  mlxlm.de.md  mlxlm.es.md  mlxlm.fr.md  mlxlm.it.md  mlxlm.ja.md  mlxlm.ko.md  mlxlm.md  mlxlm.pt.md  mlxlm.zh.md  ollama.de.md  ollama.es.md  ollama.fr.md  ollama.it.md  (+25 more)
docs/research/bench-method/: protocol.md
docs/research/comparison-panel/: 2026-05-apple-silicon-agentic-inference-panel.de.md  2026-05-apple-silicon-agentic-inference-panel.es.md  2026-05-apple-silicon-agentic-inference-panel.fr.md  2026-05-apple-silicon-agentic-inference-panel.it.md  2026-05-apple-silicon-agentic-inference-panel.ja.md  2026-05-apple-silicon-agentic-inference-panel.ko.md  2026-05-apple-silicon-agentic-inference-panel.md  2026-05-apple-silicon-agentic-inference-panel.pt.md  2026-05-apple-silicon-agentic-inference-panel.zh.md  2026-06-qwen-agentworld-35b.de.md  2026-06-qwen-agentworld-35b.es.md  2026-06-qwen-agentworld-35b.fr.md  2026-06-qwen-agentworld-35b.it.md  2026-06-qwen-agentworld-35b.ja.md  2026-06-qwen-agentworld-35b.ko.md  2026-06-qwen-agentworld-35b.md  2026-06-qwen-agentworld-35b.pt.md  2026-06-qwen-agentworld-35b.zh.md
hooks/: copy_markdown_sources.py  copy_well_known.py
overrides/: home.html  main.html
scripts/: bench-concurrent.py  bench-large-context.py  bench-seed-macbook-v2.sh  bench-seed-macbook.sh  bench-seed-mini-v2.sh  bench-seed-mini.sh  cross-validate-bench.py  rebuild-and-submit.py
src/asiai/: __init__.py  __main__.py  _filelock.py  alerting.py  cli.py  community.py  daemon.py  doctor.py
src/asiai/advisor/: __init__.py  recommender.py
src/asiai/auth/: __init__.py  audit.py  cli.py  config.py  loopback.py  operator.py  ratelimit.py
src/asiai/benchmark/: __init__.py  agentic.py  agentic_report.py  auto_restart.py  burst.py  card.py  code_eval.py  code_eval_scenarios.py  code_fidelity.py  code_fidelity_scenarios.py  instruct_eval.py  instruct_eval_scenarios.py  instruct_verifiers.py  language_eval.py  language_profiles.py  output_gates.py  prompts.py  quality_gates.py  regression.py  reporter.py  runner.py  thinking_ablation.py
src/asiai/collectors/: __init__.py  gpu.py  inference.py  ioreport.py  power.py  snapshot.py  system.py
src/asiai/display/: __init__.py  cli_renderer.py  formatters.py  tui.py
src/asiai/engines/: __init__.py  base.py  config.py  detect.py  exo.py  llamacpp.py  lmstudio.py  mlxlm.py  ollama.py  omlx.py  openai_compat.py  rapidmlx.py  vllm_mlx.py  vmlx.py
src/asiai/fleet/: __init__.py  cli.py  command_spec.py  config.py  poll.py
src/asiai/mcp/: __init__.py  (+4 more)
tests/: conftest.py  test_agent_registration.py  test_agentic_self_describing.py  test_alerting.py  test_api.py  test_auth_audit.py  test_auth_config.py  test_auth_loopback.py  test_auth_ratelimit.py  test_benchmark.py  test_benchmark_agentic.py  test_benchmark_agentic_fixtures.py  test_benchmark_auto_restart.py  test_benchmark_burst.py  test_benchmark_quality_gates.py  test_card.py  test_cli.py  test_cli_config.py  test_cli_plugins.py  test_cli_renderer.py  test_code_eval.py  test_code_fidelity.py  test_code_fidelity_eval.py  test_collectors.py  test_command_spec.py  test_community.py  test_config.py  test_daemon.py  test_display.py  test_doctor.py  test_e2e.py  test_engine_status.py  test_engines.py  test_exo.py  test_fleet_cli.py  test_fleet_command_route.py  test_fleet_config.py  test_fleet_metrics.py  test_fleet_poll.py  test_fleet_routes.py  (+29 more)
(+52 files in other folders)
