[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asiai"
version = "0.4.0"
description = "Multi-engine LLM benchmark & monitoring CLI for Apple Silicon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Jean-Marc Nahlovsky", email = "druide67@free.fr" },
]
keywords = [
    "llm",
    "benchmark",
    "monitoring",
    "apple-silicon",
    "ollama",
    "lm-studio",
    "mlx",
    "inference",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
tui = ["textual>=0.80"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "jinja2>=3.1", "python-multipart>=0.0.9"]
all = ["textual>=0.80", "fastapi>=0.115", "uvicorn[standard]>=0.34", "jinja2>=3.1", "python-multipart>=0.0.9"]
dev = ["pytest", "ruff", "pytest-asyncio", "pytest-cov", "httpx"]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://github.com/druide67/asiai"
Repository = "https://github.com/druide67/asiai"
Issues = "https://github.com/druide67/asiai/issues"
Changelog = "https://github.com/druide67/asiai/blob/main/CHANGELOG.md"

[project.scripts]
asiai = "asiai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asiai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["asiai"]
omit = ["src/asiai/display/tui.py", "src/asiai/web/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires real inference engines (deselect with '-m not integration')",
    "apple_silicon: requires Apple Silicon hardware",
]
